5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1577_1327.log
== TEST (2019-04-09 18:33:10) 
-- CODE:
ptint(90-55)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ptint(90-55)
NameError: name 'ptint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:35:18) 
-- CODE:
ptint(90_55)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ptint(90_55)
NameError: name 'ptint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 18:36:57) 
-- CODE:
val=90-55
print(val)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:37:00) 
-- CODE:
val=90-55
print(val)
-- EXECUTION TIME:
0.144076
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
